# Baccarat

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: BaccaratGame.h  Card.h  Deck.h  Player.h
src/: BaccaratGame.cpp  Deck.cpp  Player.cpp
tests/: tests.cpp
